--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,67 @@
 body {
-  margin: 0;
+  height: 100%;
+  overflow: hidden;
+  font: 16px sans-serif;
+  color: rgb(105, 155, 58);
+  background-color: rgb(49, 49, 49);
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.game-wrapper {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  width: 800px;
+  height: 600px;
+  background: url(assets/background-blue.png);
+  animation: scroll-background 5s linear infinite;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: -2;
+}
+
+header {
+  text-align: center;
+  background: black;
+  color: #fff;
+  padding: 10px;
+}
+
+footer {
+  padding: 10px;
+  text-align: center;
+  font-size: 11px;
+  background: black;
+  color: white;
+}
+
+@keyframes scroll-background {
+  from {
+    background-position-y: 0px;
+  }
+  to {
+    background-position-y: 256px;
+  }
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.main .laser {
+  position: absolute;
+  margin-left: -2.5px;
+  height: 25px;
+  z-index: -1;
 }
